# bugbarn

./: .dockerignore  .gitignore  .golangci.yml  .jscpd.json  .sops.yaml  CLAUDE.md  Makefile  README.md  docker-compose.yml  go.mod  go.sum  nfpm-bb.yaml  nfpm-bugbarn.yaml
.claude/: settings.json
.claude/hooks/: go-build-check.sh  pre-commit.sh  pre-pr.sh
.github/prompts/: spec-kit.md
.github/workflows/: binary-release.yml  build-and-test.yml  ci.yml  deploy-k3s.yml  pages.yml  (+7 more)
.woodpecker/: README.md  binary-release.yaml  build-and-test.yaml  ci.yaml  deploy-production.yaml  release.yaml  release.yml.bak  tag-check.yaml
api/: embed.go  openapi.yaml
deploy/: README.md  ci-secrets.yaml  woodpecker-secrets.yaml
docs/: README.md  api.md  architecture.md  ci-integration.md  cli.md  getting-started.md  mvp-acceptance.md  operations.md  overview.md  release-checklist.md
examples/: README.md  load-fixture.mjs
infra/: Makefile  README.md  ansible.cfg  github-runner-macos.yml  github-runner.yml  inventory.ini
scripts/: check-coverage.sh  check-file-length.sh  heal-go-modcache.sh  validate_openapi.py
sdks/python/: pyproject.toml
sdks/python/src/bugbarn/: __init__.py  breadcrumbs.py  client.py  user.py
sdks/python/tests/: test_breadcrumbs.py  test_client.py  test_user.py
site/: astro.config.mjs  index.html  package-lock.json  package.json  tailwind.config.mjs
web/: .env.example  .jscpd.json  README.md  app.js  build.mjs  eslint.config.js  index.html  manifest.json  package-lock.json  package.json  playwright.config.ts  styles.css  sw.js  tsconfig.json
(+429 files in other folders)
